Estilos del body

--- a/design/styles.css
+++ b/design/styles.css
@@ -15,14 +15,16 @@
 --Lime-green: hsl(145, 58%, 55%);
 --Violet: hsl(264, 64%, 52%);
 --Soft-orange: hsl(43, 84%, 65%);
---Very-dark-blue: hsl(226, 43%, 10%)
---Dark-blue: hsl(235, 46%, 20%)
---Desaturated-blue: hsl(235, 45%, 61%)
---Pale-Blue: hsl(236, 100%, 87%)
+--Very-dark-blue: hsl(226, 43%, 10%);
+--Dark-blue: hsl(235, 46%, 20%);
+--Desaturated-blue: hsl(235, 45%, 61%);
+--Pale-Blue: hsl(236, 100%, 87%);
 }
 
 body {
+  background: var(--Very-dark-blue);
   font-family: 'Rubik', sans-serif;
+  color: var(--Pale-Blue);
 }
 
 
