--- a/design/styles.css
+++ b/design/styles.css
@@ -30,6 +30,9 @@ body {
 .main-container {
   width: 328px;
   margin: 77px auto;
+}
+
+.first-section {
   position: relative;
 }
 
@@ -144,4 +147,72 @@ body {
 
 .attribution a:hover {
   color: var(--Desaturated-blue);
+}
+
+@media (min-width: 1200px) {
+  .main-container {
+    width: 1150px;
+    display: flex;
+  }
+
+  .first-section {
+    padding-top: 24px;
+    width: 260px;
+    height: 564px;
+  }
+
+  .second-section {
+    width: 860px;
+    height: 564px;
+    margin-top: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 24px;
+  }
+
+  .main-card__user {
+    height: 340px;
+    flex-direction: column;
+  }
+
+  .main-card__img {
+    width: 85px;
+    margin-bottom: 45px;
+  }
+
+  .main-card__title {
+    font-size: 1em;
+  }
+
+  .main-card__name {
+    font-size: 2.4em;
+  }
+
+  .main-card__dates {
+    margin-top: 230px;
+    height: 200px;
+    flex-direction: column;
+    padding: 40px 32px 18px;
+  }
+
+  .card {
+    width: 240px;
+    height: 244px;
+    margin-bottom: 25px;
+  }
+
+  .card__img {
+    margin-left: 140px;
+  }
+
+  .card__details {
+    height: 200px;
+  }
+
+  .card__hours {
+    height: 300px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px 0;
+  }
 }
