--- a/design/styles.css
+++ b/design/styles.css
@@ -137,7 +137,7 @@ body {
 .attribution { 
   font-size: 16px; 
   text-align: center;
-  margin-bottom: 60px;
+  margin-top: -60px;
 }
 
 .attribution a { 
