--- a/design/styles.css
+++ b/design/styles.css
@@ -137,7 +137,7 @@ body {
 .attribution { 
   font-size: 16px; 
   text-align: center;
-  margin-top: -60px;
+  margin-top: 50px;
 }
 
 .attribution a { 
@@ -153,6 +153,7 @@ body {
   .main-container {
     width: 1150px;
     display: flex;
+    margin: auto;
   }
 
   .first-section {
